# ekphrasis

./: .gitignore  README.md  docker-compose.yml  index.html
.github/workflows/: deploy.yml
assets/: index-4cp9eEd0.js  index-BYjns8vu.js  index-C2oypGaT.js  index-DPKd_dbE.css  index-DdOhcHAj.js  index-tF3OkaIf.css
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  deps.py  main.py
backend/app/api/: auth.py  mutual_funds.py  portfolio.py  stocks.py  tax_harvest.py  watchlist.py
backend/app/models/: __init__.py  mutual_fund.py  portfolio.py  stock.py  tax_harvest.py  user.py  watchlist.py
backend/app/schemas/: auth.py  mutual_fund.py  portfolio.py  stock.py  tax_harvest.py  watchlist.py
backend/app/services/scraper/: cache.py  screener_scraper.py
backend/app/tasks/: celery_app.py  scrape_stocks.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Layout.tsx  MFUploader.tsx  MetricsTable.tsx  Navbar.tsx  StockCard.tsx
frontend/src/components/charts/: AllocationChart.tsx  PnLChart.tsx
frontend/src/hooks/: useMutualFunds.ts  usePortfolio.ts  useStocks.ts  useTaxHarvest.ts  useWatchlist.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  MutualFunds.tsx  Portfolio.tsx  Register.tsx  StockDetail.tsx  StockScreener.tsx  TaxHarvesting.tsx
frontend/src/store/: authStore.ts
frontend/src/utils/: format.ts
scripts/: run_scraper.py  seed_stocks.py
